apps/open-webui/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: open-webui-ingress
  namespace: apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`ia.felipecisotto.com.br`)
      kind: Rule
      services:
        - name: open-webui
          port: 8080
  tls:
    secretName: certificates
